--- a/src/server_manager/ui_components/outline-step-view.html
+++ b/src/server_manager/ui_components/outline-step-view.html
@@ -21,35 +21,60 @@
       :host {
         display: block;
       }
-      .step-header {
-        padding: 48px 24px 24px;
+      .step-container {
+        padding: 36px 24px 24px;
         vertical-align: middle;
         height: auto;
         text-align: left;
         background-color: #263238;
+        display: flex;
+        flex-direction: column;
       }
-      .step-title, .step-description {
+      .step-header {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        margin-bottom: 36px;
+      }
+      .step-text {
+        flex: 2;
+        margin-right: 24px;
         font-size: 20px;
         line-height: 28px;
       }
       .step-title {
-        color: rgba(255, 255, 255, 0.87);
+        color: var(--light-gray);
       }
       .step-description {
-        color: rgba(255, 255, 255, 0.54);
+        color: var(--medium-gray);
+        max-width: 40ch;
+      }
+      .step-action {
+        display: flex;
+        justify-content: flex-end;
+        flex: 1;
       }
     </style>
-    <div class="step-header">
-      <div class="step-container">
-        <div class="step-title"><slot name="step-title"></slot></div>
-        <div class="step-description"><slot name="step-description"></slot></div>
+    <div class="step-container">
+      <div class="step-header">
+        <div class="step-text">
+          <div class="step-title"><slot name="step-title"></slot></div>
+          <div class="step-description"><slot name="step-description"></slot></div>
+        </div>
+        <div class="step-action" hidden$="[[!displayAction]]"><slot name="step-action"></slot></div>
       </div>
+      <slot></slot>
     </div>
-    <slot></slot>
   </template>
   <script>
     Polymer({
-      is: 'outline-step-view'
+      is: 'outline-step-view',
+      properties: {
+        displayAction: {
+          type: Boolean,
+          value: false
+        },
+      },
     });
   </script>
 </dom-module>
