Enable multiple server support

--- a/src/server_manager/ui_components/cloud-install-styles.html
+++ b/src/server_manager/ui_components/cloud-install-styles.html
@@ -85,15 +85,14 @@ https://www.polymer-project.org/2.0/docs/devguide/style-shadow-dom#style-modules
       }
 
       app-toolbar {
-        background-color: var(--background-color);
         color: #EEE;
         font-size: 12px;
         font-weight: 300;
         letter-spacing: .02em;
         color: var(--light-gray);
         padding: 0;
-        border-bottom: 2px solid var(--border-color);
-        /* Toolbar Copy 3: */
+        min-height: 60px;
+        border-bottom: 1px solid var(--border-color);
       }
 
       app-toolbar paper-icon-button {
