--- a/src/server_manager/ui_components/app-root.html
+++ b/src/server_manager/ui_components/app-root.html
@@ -24,6 +24,7 @@
 <link rel='import' href='../bower_components/paper-dialog/paper-dialog.html'>
 <link rel='import' href='../bower_components/paper-dialog-scrollable/paper-dialog-scrollable.html'>
 <link rel='import' href='../bower_components/paper-listbox/paper-listbox.html'>
+<link rel='import' href='../bower_components/paper-menu-button/paper-menu-button.html'>
 
 <link rel="import" href="./cloud-install-styles.html">
 <link rel="import" href="./outline-about-dialog.html">
@@ -75,52 +76,126 @@
       }
       #appDrawer {
         --app-drawer-content-container: {
+          color: var(--medium-gray);
           background-color: var(--background-contrast-color);
+          display: flex;
+          flex-direction: column;
+          justify-content: space-between;
+          align-items: right;
         };
       }
-      #appDrawer paper-listbox {
+      #appDrawer > * {
+        width: 100%;
+      }
+      .servers {
+        overflow: scroll;
+        flex: 1;
+      }
+      .servers-section {
+        padding: 12px 0;
+        border-bottom: 1px solid var(--border-color);
+      }
+      .servers-section:last-child {
+        border-bottom: none;
+      }
+      .servers-header {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding-left: 24px;
+        line-height: 39px;
+      }
+      .do-overflow-menu {
+        padding: 24px;
+        color: var(--dark-gray);
+        text-align: left;
+        display: flex;
+        flex-direction: column;
+      }
+      .do-overflow-menu h4 {
+        margin-top: 0;
+        white-space: nowrap;
+      }
+      .do-overflow-menu .account-info {
+        display: flex;
+        align-items: center;
+        color: var(--faded-gray);
+      }
+      .do-overflow-menu .account-info img {
+        margin-right: 12px;
+        width: 24px;
+      }
+      .do-overflow-menu .sign-out-button  {
+        margin-top: 24px;
+        align-self: flex-end;
+        font-weight: bold;
+        cursor: pointer;
+        text-transform: uppercase;
+      }
+      .servers-container {
+        padding-right: 12px; /* In case the server name is wraps. */
+      }
+      .server {
+        display: flex;
+        align-items: center;
+        width: 100%;  /* For the side bar icons. */
+        margin: 18px 0;
+        padding: 6px 0;
+        cursor: pointer;
+      }
+      .server.selected {
+        color: white;
+        border-left: 2px solid var(--primary-green);
+      }
+      .server-icon {
+        width: 22px;
+        height: 22px;
+        /* Prevent the image from shrinking when the server title spans multiple lines */
+        min-width: 22px !important;
+        margin: 0 24px;
+      }
+      .selected > .server-icon {
+        /* Account for the selected border width to preserve center alignment. */
+        margin-left: 22px;
+      }
+      .add-server-section {
+        padding: 24px 0;
+        text-transform: uppercase;
+        color: var(--primary-green);
+        font-size: 12px;
+        letter-spacing: 0.6px;
+        border-top: 1px solid var(--border-color);
+        border-bottom: 1px solid var(--border-color);
+        cursor: pointer;
+      }
+      .add-server-section paper-icon-item {
+        margin-left: 24px;
+      }
+      .add-server-section paper-icon-item iron-icon {
+        margin-right: 24px;
+      }
+      #appDrawer > paper-listbox {
         color: var(--medium-gray);
         background-color: var(--background-contrast-color);
       }
-      #appDrawer paper-icon-item {
+      #appDrawer > paper-listbox > * {
         display: block;
         cursor: pointer;
-        padding: 12px 24px 12px 24px;
+        padding: 0 24px;
         font-size: 14px;
-      }
-      #appDrawer iron-icon {
-        margin-right: 12px;
-      }
-      #appDrawer paper-icon-item:hover,
-      #appDrawer paper-icon-item iron-icon:hover {
-        color: var(--primary-green);
+        line-height: 40px;
       }
       #appDrawer a {
         color: inherit;
       }
-      #appDrawer paper-icon-item:focus,
       #appDrawer a:focus {
         outline: none;
       }
-      #appDrawer #signedIn {
-        text-align: center;
+      .legal-links {
+        margin: 36px -6px 0;
       }
-      #appDrawer #signedIn img {
-        height: 65px;
-        margin-top: 12px;
-      }
-      #appDrawer #signOutButton  {
-        font-weight: bold;
-        margin-bottom: 24px;
-        cursor: pointer;
-        text-transform: uppercase;
-      }
-      #appDrawer #signOutButton:hover {
-        color: var(--primary-green);
-      }
-      app-drawer-layout app-toolbar {
-        background-color: var(--background-contrast-color);
-        border-bottom: 1px solid rgba(200, 200, 200, 0.12);
+      .legal-links > * {
+        margin: 0 6px;
       }
       app-toolbar [main-title] img {
         height: 16px;
@@ -135,11 +210,49 @@
           background-color: var(--background-contrast-color);
         };
       }
-      #sideBar div {
-        margin-top: 12px;
+      .side-bar-container {
         height: 100%;
         text-align: center;
         color: var(--light-gray);
+        display: flex;
+        flex-direction: column;
+      }
+      .side-bar-container .servers {
+        flex: initial; /* Prevent the server list pushing down the add server button. */
+      }
+      .side-bar-container .servers::-webkit-scrollbar {
+        display: none;
+      }
+      .side-bar-section {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding: 12px 0;
+        border-bottom: 1px solid var(--border-color);
+      }
+      .side-bar-section.menu {
+        min-height: 32px;
+      }
+      .side-bar-section.servers-section {
+        padding: 24px 0;
+      }
+      .side-bar-section .server {
+        justify-content: center;
+        margin: 12px auto;
+        padding: 2px 0;
+      }
+      .side-bar-section .provider-icon {
+        margin-bottom: 12px;
+        padding: 12px 0;
+        opacity: 0.54;
+        filter: grayscale(100%);
+      }
+      .side-bar-section.add-server-section {
+        flex: 1 0 24px;
+        border-bottom: none;
+      }
+      .side-bar-section .server-icon {
+        margin: 0;
       }
       #getConnectedDialog {
         height: 562px;
@@ -169,42 +282,64 @@
             <div main-title><img src="images/outline-manager-logo.svg"></div>
           </app-toolbar>
 
-          <div id='signedIn' hidden$='{{!isSignedIn}}'>
-            <img src='images/manager-profile-2x.png'>
-            <p>{{adminEmail}}</p>
-            <div id='signOutButton' on-tap='signOutTapped'>Sign Out</div>
-            <hr/>
+          <!-- Servers section -->
+          <div class="servers">
+            <!-- DigitalOcean servers -->
+            <div class="servers-section" hidden$="{{!isSignedInToDigitalOcean}}">
+              <div class="servers-header">
+                <span>DigitalOcean servers</span>
+                <paper-menu-button horizontal-align="left" class="" close-on-activate no-animations dynamic-align no-overlap>
+                  <paper-icon-button icon="more-vert" slot="dropdown-trigger"></paper-icon-button>
+                  <div class="do-overflow-menu" slot="dropdown-content">
+                    <h4>Disconnect DigitalOcean account</h4>
+                    <div class="account-info"><img src="images/digital_ocean_logo.svg" />{{adminEmail}}</div>
+                    <div class="sign-out-button" on-tap="signOutTapped">Disconnect</div>
+                  </div>
+                </paper-menu-button>
+              </div>
+              <div class="servers-container">
+                <template is="dom-repeat" items="{{serverList}}" as="server" filter="_isServerManaged" sort="_sortServersByName">
+                  <div class$="server {{_computeSelectedServerClass(selectedServer, server)}}" data-server$=[[server]] on-tap="_showServer">
+                    <img class="server-icon" src$="images/{{_computeSelectedServerImage(selectedServer, server)}}" />
+                    <span>{{server.name}}</span>
+                  </div>
+                </template>
+              </div>
+            </div>
+            <!-- Manual servers -->
+            <div class="servers-section" hidden$="{{!hasManualServers}}">
+              <div class="servers-header">
+                <span>Servers</span>
+              </div>
+              <div class="servers-container">
+                <template is="dom-repeat" items="{{serverList}}" as="server" filter="_isServerManual" sort="_sortServersByName">
+                  <div class$="server {{_computeSelectedServerClass(selectedServer, server)}}" data-server$=[[server]] on-tap="_showServer">
+                    <img class="server-icon" src$="images/{{_computeSelectedServerImage(selectedServer, server)}}" />
+                    <span>{{server.name}}</span>
+                  </div>
+                </template>
+              </div>
+            </div>
           </div>
+
+          <!-- Add server -->
+          <div class="add-server-section" on-tap="showIntro">
+            <paper-icon-item>
+              <iron-icon icon="add" slot="item-icon"></iron-icon>Add server
+            </paper-icon-item>
+          </div>
+
+          <!-- Links section -->
           <paper-listbox on-tap="maybeCloseDrawer">
-            <a href="https://s3.amazonaws.com/outline-vpn/index.html#/en/support/dataCollection">
-              <paper-icon-item>
-                <iron-icon icon="lock" slot="item-icon"></iron-icon>Data Collection
-              </paper-icon-item>
-            </a>
-            <a href="https://www.google.com/policies/privacy/">
-              <paper-icon-item>
-                <iron-icon icon="lock" slot="item-icon"></iron-icon>Privacy
-              </paper-icon-item>
-            </a>
-            <a href="https://s3.amazonaws.com/outline-vpn/static_downloads/Outline-Terms-of-Service.html">
-              <paper-icon-item>
-                  <iron-icon icon="info" slot="item-icon"></iron-icon>Terms
-              </paper-icon-item>
-            </a>
-            <paper-icon-item on-tap="submitFeedbackTapped">
-              <iron-icon icon="feedback" slot="item-icon"></iron-icon>Submit Feedback
-            </paper-icon-item>
-            <a href="https://s3.amazonaws.com/outline-vpn/index.html#/en/support/">
-              <paper-icon-item>
-                <iron-icon icon="help" slot="item-icon"></iron-icon>Help Center
-              </paper-icon-item>
-            </a>
-            <paper-icon-item on-tap="aboutTapped">
-              <iron-icon icon="info" slot="item-icon"></iron-icon>About Outline
-            </paper-icon-item>
-            <paper-icon-item on-tap="showLicensesTapped">
-              <iron-icon icon="info" slot="item-icon"></iron-icon>Show Licenses
-            </paper-icon-item>
+            <a href="https://s3.amazonaws.com/outline-vpn/index.html#/en/support/dataCollection">Data collection</a>
+            <span on-tap="submitFeedbackTapped">Feedback</span>
+            <a href="https://s3.amazonaws.com/outline-vpn/index.html#/en/support/">Help</a>
+            <span on-tap="aboutTapped">About</span>
+            <div class="legal-links">
+              <a href="https://www.google.com/policies/privacy/">Privacy</a>
+              <a href="https://s3.amazonaws.com/outline-vpn/static_downloads/Outline-Terms-of-Service.html">Terms</a>
+              <span on-tap="showLicensesTapped">Licenses</span>
+            </div>
           </paper-listbox>
         </app-drawer>
 
@@ -222,9 +357,37 @@
         </app-header-layout>
       </app-drawer-layout>
 
+      <!-- Side bar -->
       <app-drawer id="sideBar" opened$="[[shouldShowSideBar]]" persistent>
-        <div>
-          <paper-icon-button icon="menu" on-click="_toggleAppDrawer"></paper-icon-button>
+        <div class="side-bar-container">
+          <div class="side-bar-section menu">
+            <paper-icon-button icon="menu" on-click="_toggleAppDrawer"></paper-icon-button>
+          </div>
+          <div class="servers">
+            <!-- DigitalOcean servers -->
+            <div class="side-bar-section servers-section" hidden$="{{!isSignedInToDigitalOcean}}">
+              <img class="provider-icon" src="images/do_white_logo.svg"/>
+              <template is="dom-repeat" items="{{serverList}}" as="server" filter="_isServerManaged" sort="_sortServersByName">
+                <div class$="server {{_computeSelectedServerClass(selectedServer, server)}}" data-server$=[[server]] on-tap="_showServer">
+                  <img class="server-icon" src$="images/{{_computeSelectedServerImage(selectedServer, server)}}" />
+                </div>
+              </template>
+            </div>
+            <!-- Manual servers -->
+            <div class="side-bar-section servers-section" hidden$="{{!hasManualServers}}">
+              <img class="provider-icon" src="images/cloud.svg"/>
+              <template is="dom-repeat" items="{{serverList}}" as="server" filter="_isServerManual" sort="_sortServersByName">
+                <div class$="server {{_computeSelectedServerClass(selectedServer, server)}}" data-server$=[[server]] on-tap="_showServer">
+                  <img class="server-icon" src$="images/{{_computeSelectedServerImage(selectedServer, server)}}" />
+                </div>
+              </template>
+            </div>
+          </div>
+          <div class="side-bar-section add-server-section" on-tap="showIntro">
+              <paper-icon-item>
+                <iron-icon icon="add" slot="item-icon"></iron-icon>
+              </paper-icon-item>
+            </div>
         </div>
       </app-drawer>
 
@@ -262,13 +425,25 @@
     Polymer({
       is: 'app-root',
       properties: {
+        serverList: {
+          type: Array,
+          value: [],
+        },
+        selectedServer: {
+          type: Object, // see UiServer in app.ts
+          value: {},
+        },
+        hasManualServers: {
+          type: Boolean,
+          computed: '_computeHasManualServers(serverList.*)',
+        },
         adminEmail: {
           type: String,
           value: ''
         },
-        isSignedIn: {
+        isSignedInToDigitalOcean: {
           type: Boolean,
-          computed: '_isSignedIn(adminEmail)'
+          computed: '_computeIsSignedInToDigitalOcean(adminEmail)'
         },
         outlineVersion: String,
         userAcceptedTos: {
@@ -302,6 +477,8 @@
         'ManualServerEntryCancelled': 'handleManualCancelled'
       },
       showIntro: function () {
+        this.maybeCloseDrawer();
+        this.selectedServer = undefined;
         this.currentPage = 'intro';
       },
       getDigitalOceanOauthFlow: function (onCancel) {
@@ -388,8 +565,8 @@
       // the user chose to retry the failing operation.
       showConnectivityDialog: function (cb) {
         const dialogTitle = 'Connection problem';
-        const dialogText = 'We\'re having trouble connecting with your DigitalOcean account. This is often a temporary problem with DigitalOcean or with your internet connection. In some cases, logging into DigitalOcean again will fix the problem.';
-        this.showModalDialog(dialogTitle, dialogText, ['login', 'retry'])
+        const dialogText = 'We\'re having trouble connecting to your DigitalOcean account. This is sometimes a temporary problem with DigitalOcean or with your internet connection. If retrying doesn\`t work, logging into DigitalOcean again should fix the problem.';
+        this.showModalDialog(dialogTitle, dialogText, ['cancel', 'retry'])
         .then((clickedButtonIndex) => {
           cb(clickedButtonIndex === 1);  // pass true if user clicked retry
         });
@@ -412,8 +589,11 @@
               }
             });
       },
-      _isSignedIn: function (adminEmail) {
+      _computeIsSignedInToDigitalOcean: function (adminEmail) {
         return Boolean(adminEmail);
+      },
+      _computeHasManualServers: function(serverList) {
+        return this.serverList.filter(server => !server.isManaged).length > 0;
       },
       _userAcceptedTosChanged: function(userAcceptedTos) {
         if (userAcceptedTos) {
@@ -510,6 +690,36 @@
       },
       _computeSideBarMarginClass: function(shouldShowSideBar) {
         return shouldShowSideBar ? 'side-bar-margin' : '';
+      },
+      _isServerManaged: function(server) {
+        return server.isManaged;
+      },
+      _isServerManual: function(server) {
+        return !server.isManaged;
+      },
+      _sortServersByName: function(a, b) {
+        const aName = a.name.toUpperCase();
+        const bName = b.name.toUpperCase();
+        if (aName < bName) {
+          return -1;
+        } else if (aName > bName) {
+          return 1;
+        }
+        return 0;
+      },
+      _computeSelectedServerClass: function(selectedServer, server) {
+        return this._isServerSelected(server) ? 'selected' : '';
+      },
+      _computeSelectedServerImage: function(selectedServer, server) {
+        return this._isServerSelected(server) ? 'server-icon-selected.png' : 'server-icon.png';
+      },
+      _isServerSelected: function(server) {
+        return !!this.selectedServer && this.selectedServer.id === server.id;
+      },
+      _showServer: function(event) {
+        const server = event.model.server;
+        this.fire('ShowServerRequested', {displayServerId: server.id });
+        this.maybeCloseDrawer();
       },
     });
   </script>
